# serveless

./: Cargo.toml
